--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,10 @@
 <Project>
   <PropertyGroup>
     <!-- Folder containing SpaceEngineers.exe -->
-    <Bin64>$(registry:HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\Steam App 244850@InstallLocation)\Bin64</Bin64>
-
-    <!-- Plugin version -->
+      <!-- <Bin64>$(registry:HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\Steam App 244850@InstallLocation)\Bin64</Bin64> -->
+      <Bin64>G:\SteamLibrary\steamapps\common\SpaceEngineers\Bin64</Bin64>
+      <Pulsar64L>$(AppData)\pulsar\Libraries\Legacy</Pulsar64L>
+      <!-- Plugin version -->
     <Version>1.0.0</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
